--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Hello word</h1>
-   <script src="index.js"></script> 
-</body>
+    <link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+    <button title="wassup" onclick=" alert('yoo')">yooo</button>
+
+    <script src="index.js"></script>
+  </body>
 </html>
