--- a/05-cart.html
+++ b/05-cart.html
@@ -21,8 +21,14 @@
    >+2</button>
     <button  onclick="cartQuantity = cartQuantity + 3; console.log(`Cart quantity: ${cartQuantity}`);">+3</button>
      <button onclick="
-     cartQuantity = 0; console.log(`Cart was reset`);
-     console.log(`Cart quantity: ${cartQuantity}`)"> Reset cart</button>
+     cartQuantity = 0; console.log(`Cart was reset`);;
+     console.log(`Cart quantity: ${cartQuantity}`);"> Reset cart</button>
+
+     <button onclick="cartQuantity += 4;console.log(`Cart quantity: ${cartQuantity}`);">4</button>
+     <button onclick="cartQuantity += 5;console.log(`Cart quantity: ${cartQuantity}`);">5</button>
+
+     <button onclick=" cartQuantity -= 2; console.log(`Cart quantity: ${cartQuantity}`);">-2</button>
+     <button onclick=" cartQuantity-= 3; console.log(`Cart quantity: ${cartQuantity}`);">-3</button>
   
    
    
