--- a/05-var.html
+++ b/05-var.html
@@ -13,10 +13,10 @@
   <script>
     let variable1 = 3;
     console.log(variable1);
-    let calculaion = 2 +2;
+    const calculaion = 2 +2;
     console.log(calculaion);
     console.log(calculaion + 2);
-    let message = 'hello';
+    const message = 'hello';
     console.log(message);
 
     variable1 = 5;
@@ -24,6 +24,10 @@
 
     variable1 = variable1 + 1
     console.log(variable1);
+
+
+    const variable2 = 3;
+    variable2 = 5;
 
   </script>
 </body>
