--- a/06.html
+++ b/06.html
@@ -11,25 +11,46 @@
 
 
   <script>
-    // if(true) {
-    //   console.log('hello');
-    // } else{
-    //   console.log('else');
-    // }
-    // const age = 15;
+    true
+    false
 
-    // if (12 >= 16){
+     console.log(3 < 5);
 
-    //   console.log('you can drive');
+     if (true){ 
+      console.log('hello')
+     } else{
+      console.log('else')
+     }
 
-    // } else if(15 >= 14){
-    //   console.log('almost there')
-    // } else{
-    //   console.log('you cannot drive');
-    // }
-    console.log(true && true);
-     console.log(0.2 >= 0 && 0.2 < 1/3);
+     const age = 15;
 
+     if(
+      age >= 16
+     ){
+      console.log('you can drive')
+
+     } else if(15 >= 14) {
+      console.log('almost there')
+
+     } else{
+      console.log('you cant drive')
+     }
+
+
+     console.log( true && true);
+     console.log(0.2 >= 0 && 0.2 > 1/3);
+
+     console.log( true || false)
+     console.log(!false)
+  
+     if (5) {
+      console.log('truthy');
+     }
+
+
+     true 
+  
+  
   </script>
 </body>
 </html>
